python-test_driven_development/tests/5-text_indentation.txt
==============
5-text_indentation.py Module
==============

Using the `text_indentation` Function
--------------------------------------

This file demonstrates the usage of the `text_indentation` function from the `5-text_indentation.py` module.

First, import the `text_indentation` function from the `5-text_indentation.py` module:

.. code-block:: python

    >>> text_indentation = __import__('5-text_indentation').text_indentation

Test Cases
~~~~~~~~~~

1. **TypeError when passing an integer**

   .. code-block:: python

      >>> text_indentation(3)
      Traceback (most recent call last):
      TypeError: text must be a string

2. **Test with a string containing sentences and punctuation marks**

   .. code-block:: python

      >>> text_indentation("hi. My name is: Juan. What your name?")
      hi.
      <BLANKLINE>
      My name is:
      <BLANKLINE>
      Juan.
      <BLANKLINE>
      What your name?
      <BLANKLINE>

3. **TypeError when no argument is passed**

   .. code-block:: python

      >>> text_indentation()
      Traceback (most recent call last):
      TypeError: text_indentation() missing 1 required positional argument: 'text'
